--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     color: white;
-    background-color: black;
+    background-color: rgb(78, 77, 77);
     font-family: 'Sacramento', cursive;
-    font-size: 32px;
+    font-size: 42px;
     margin-top: 5%;
     margin-left: 20%;
     margin-right: 20%;
